--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
